# CrispPain

./: CMakeLists.txt
assets/images/: add-hitbox.xcf  add-hurtbox.xcf
assets/meshes/mfw/: crispbit.crispbox  crispbit.fbx
docs/: example.crispbox
docs/projectinfo/: index.html
src/: CapsuleShader.cpp  CapsuleShader.h  CrispPainView.cpp  CrispPainView.h  MainMenu.cpp  MainMenu.h  MyCanvas.cpp  MyCanvas.h  Pain.cpp  Pain.h  QSFMLCanvas.cpp  QSFMLCanvas.h  main.cpp  theogshader.glsl
